--- a/Dockerfiles/icinga2/README
+++ b/Dockerfiles/icinga2/README
@@ -5,3 +5,5 @@ To start the icinga2 container, run:
 This image has a conf.d directory which is intended to get exported into /etc/icinga2/conf.d/docker/ inside the container:
 
 # docker run -i -rm -t waja/debian_icinga2:wheezy -v $(pwd)/conf.d:/etc/icinga2/conf.d/docker/ 
+
+A similar project can be found at https://github.com/jjethwa/icinga2
